CruiseControl Release Notes

Changes listed by release, then alphabetically.

CruiseControl Release Notes - 2.6.2-dev


CruiseControl Release Notes - 2.6.1

general
======================

* Fix cruisecontrol.bat in binary release for JAVA_HOME that has spaces (CC-554)
* Output PID to cc.pid in cruisecontrol.sh to fix init.d usage (CC-581).  Patch by Kevin Quigley.
* Binary distribution with embedded Jetty server now also uses Launcher (CC-586).  Patch by Mike Gilbode.
* Add Serializable to all classes required for RMI clients (CC-582).  Investigated by Frank Zoontjens.

contrib
======================

distributed
----------------------
* Updated to use Jini v2.1, rearranged tree, and added upgrade notes to README.html for mixed environments.

build loop
======================

AlienBrain
----------------------
* Add support for the property attribute

AlwaysBuild
----------------------
* Add support for property attribute

BuildStatus
----------------------
* Add support for the property attribute

ClearCase
----------------------
* Detect ClearCase UCM stream rebases as modifications (CC-464). Patch by Scott Coplin.

CompositeBuilder
----------------------
* Fix reported build time.  Patch by Frederic Mockel. 
* Changed the default element name from <builders> to <composite>

Compound
----------------------
* Add support for property attribute

CurrentBuildStatusPageListener
----------------------
* Add documentation for CurrentBuildStatusPageListener
* Fix validation messages when sourceFile invalid

default-plugins.properties
----------------------
* Change default element name for CompositeBuilder from "builders" to "composite".

ExecScript
----------------------
* Handle commands with spaces on Linux (CC-551).  Patch by Frederic Mockel.

HttpFile
----------------------
* Add support for property attribute to bring it in line with the documentation (CC-590)

Main
----------------------
* Add logging of root exception when config file fails to parse on load.
