@@ -57,6 +57,7 @@ maven=net.sourceforge.cruisecontrol.builders.MavenBuilder
 maven2=net.sourceforge.cruisecontrol.builders.Maven2Builder
 nant=net.sourceforge.cruisecontrol.builders.NantBuilder
 pause=net.sourceforge.cruisecontrol.PauseBuilder
+phing=net.sourceforge.cruisecontrol.builders.PhingBuilder
 rake=net.sourceforge.cruisecontrol.builders.RakeBuilder
 
 # label incrementer -- only one!
