@@ -4,6 +4,12 @@ Changes listed by release, then alphabetically.
 
 CruiseControl Release Notes - 2.6.2-dev
 
+build loop
+======================
+
+PhingBuilder
+----------------------
+* Add new plug-in for PHP build tool Phing (CC-613). Submitted by Hans Lellelid.
 
 CruiseControl Release Notes - 2.6.1
 
